# check-oldies

./: .gitignore  .pylintrc  .readthedocs.yaml  CHANGES.rst  LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yaml  publish-on-pypi.yaml
docs/: check_branches.rst  check_fixmes.rst  check_future_tags.rst  conf.py  contributing.rst  forget_me_not.rst  index.rst  installation.rst
src/check_oldies/: annotations.py  branches.py  check_branches.py  check_fixmes.py  check_future_tags.py  commands.py  compat.py  configuration.py  forget_me_not.py  githost.py  output.py  xunit.py
stubs/toml/: __init__.pyi
tests/: base.py  conftest.py  requests_mocker.py  test_annotations.py  test_check_branches.py  test_check_fixmes.py  test_check_future_tags.py  test_commands.py  test_configuration.py  test_forget_me_not.py  test_githost.py  test_output.py  test_requests_mocker.py  test_xunit.py
tests/data/: forget-me-not.toml
tests/data/project1/: file1.py  file2.py
tests/data/project2/: file.py
tests/data/project3/: file1.py
tests/data/project4/: file2.py
tests/data/project5/: file1.py  pyproject.toml
tests/data/project6/: file1.py  file2.py
tests/data/project7/: file1.py  file2.py
