[project]
name = "check-oldies"
version = "1.0.0"
requires-python = ">= 3.10"
dependencies = [
  'toml == 0.10.2; python_version < "3.11"',
]
authors = [
  { name = "Polyconseil", email = "opensource+check-oldies@polyconseil.fr" },
]
readme = "README.rst"
description = "Warns about unattended branches and FIXME or TODO annotations"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
keywords = ["fixme", "todo", "quality", "technical debt"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/Polyconseil/check-oldies"
Documentation = "https://check-oldies.readthedocs.io/en/latest/"
Repository = "https://github.com/Polyconseil/check-oldies"
Issues = "https://github.com/Polyconseil/check-oldies/issues"
Changelog = "https://github.com/Polyconseil/check-oldies/blob/master/Changelog.rst"

[project.scripts]
check-branches = "check_oldies.check_branches:main"
check-fixmes = "check_oldies.check_fixmes:main"
check-future-tags = "check_oldies.check_future_tags:main"
forget-me-not = "check_oldies.forget_me_not:main"


[tool.check-fixmes]
path = "."
max-age = 180

annotations = [
    "fixme",
    "todo",
]
whitelist = [
    ".pylintrc",
    "CHANGES.rst",
    "README.rst",
    "docs/*.rst",
]

[tool.check-future-tags]
path = "."

annotations = [
    "fixme",
    "todo",
]
whitelist = [
    "docs/*.rst",
]


[tool.isort]
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
lines_after_imports = 2
force_single_line = true
force_sort_within_sections = true
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"
known_tests = ["tests"]
skip = [
    "docs/conf.py",
]


[tool.mypy]
mypy_path = "stubs/"
show_error_codes = true
warn_unused_ignores = true


[tool.pylint.MASTER]
load-plugins = [
    "pylint_strict_informational",
]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
enable = [
    "use-symbolic-message-instead",
    "useless-suppression",
]

disable = [
    "attribute-defined-outside-init",
    "cyclic-import",
    "duplicate-code",
    "fixme",
    "file-ignored",
    "import-outside-toplevel",
    "invalid-name",
    "locally-disabled",
    "missing-docstring",
    "no-member",
    "protected-access",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-public-methods",
    "too-many-statements",
    "ungrouped-imports",
    "unused-argument",
    "wrong-import-order",  # we `isort` with a custom config
]


[tool.zest-releaser]
# Do not let zest.releaser upload to PyPI. It's done by a GitHub CI job.
upload-pypi = false