[metadata]
name = check-oldies
version = 0.8.6
description = Warns about unattended branches and FIXME or TODO annotations
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://check-oldies.readthedocs.io/en/latest/
author = Polyconseil
author_email = opensource+check-oldies@polyconseil.fr
license = BSD-3-Clause
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords = fixme todo quality
platform = any
project_urls =
    Documentation = https://check-oldies.readthedocs.io/en/latest/
    Source = https://github.com/Polyconseil/check-oldies
    Bug Tracker =  https://github.com/Polyconseil/check-oldies/issues

[options]
python_requires = >=3.6
install_requires =
    dataclasses; python_version<"3.7"
package_dir=
    =src
packages=find:

[options.entry_points]
console-scripts =
    check-fixmes = check_oldies.check_fixmes:main
    check-branches = check_oldies.check_branches:main
    forget-me-not = check_oldies.forget_me_not:main

[options.extras_require]
toml = toml

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[zest.releaser]
create-wheel = yes
